# orfan

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENCE.TXT  Makefile  README.md  project.env
data/: .gitignore  ENST00000523991.testFile.fasta  cancerGeneList_OncoKB_231226.oncogenes.mutation_testFile.ENST00000523991.bed  cancerGeneList_OncoKB_231226.oncogenes.mutation_testFile.bed  frame_iterate_fasta_test.fa  gencode.v19.annotation.ENST00000318560_testFile.gtf  gencode.v19.annotation.ENST00000523991_testFile.gtf  gencode.v19.annotation.mini_test.gtf  gencode.v33.annotation.kras204.gtf  mini_vcf_test.vcf  mutated_transcript_test1.fa  mutated_transcript_test2.fa  mutated_transcript_test3.fa  mutated_transcript_test4.fa  mutated_transcript_test5.fa  normal_transcript_test1.fa  orf_seeker_test_fasta.fa  test.gtf  test.gtf.fa  test.vcf  test_file_writeFastaEntry.fasta  test_file_writeFastaEntry2.fasta
src/: main.rs  orf_seeker.rs  protein_fragmentor.rs  test.rs  utils.rs
src/common/: bcf_parsing.rs  bed_parsing.rs  gtf_parsing.rs  mod.rs
src/transcript_mutator/: mod.rs  sequence.rs  transcript_mutator.rs
